# opus-jni-rust-android

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml  deploy.yml
rust/: Cargo.toml
rust/src/: decoder.rs  decoder_container.rs  encoder.rs  encoder_container.rs  lib.rs
rust/src/util/: exception.rs  into_exception.rs
src/main/java/com/plasmoverse/opus/: OpusDecoder.java  OpusEncoder.java  OpusException.java  OpusLibrary.java  OpusMode.java
src/test/java/com/plasmoverse/opus/: OpusTest.java
