[package]
name = "opus-jni-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.8"
jni = "0.21.1"
opus = "0.3.0"

[lib]
crate-type = ["cdylib"]

# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[patch.crates-io]
audiopus_sys = { git = "https://github.com/Icemic/audiopus_sys", branch = "dev" }
