[package]
name = "opus-jni-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.8"
jni = "0.21.1"
opus = { git = "https://github.com/ThatMG393/opus-rs-android" }

[lib]
crate-type = ["cdylib"]

# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
